<resources>
    <string name="app_name">MyConstraintLayoutApp</string>
    <string name="logo">logo</string>
    <string name="slash">/</string>
    <string name="price_label">Цена: </string>
    <string name="low_day_price_label">Минимум за день: </string>
    <string name="high_day_price_label">Максимум за день: </string>
    <string name="last_trade_label">"Последняя сделка: "</string>
    <string name="update_label">"Обновлено: "</string>
</resources>