<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivLogoCoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tvFromSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/holo_purple"
        android:textSize="@dimen/text_size_symbols_template"
        app:layout_constraintEnd_toStartOf="@id/tvSlash"
        app:layout_constraintTop_toBottomOf="@id/ivLogoCoin"
        tools:text="BTC" />

    <TextView
        android:id="@+id/tvSlash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ivLogoCoin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textSize="@dimen/text_size_symbols_template"
        android:textColor="#000"
        android:text="@string/slash"/>

    <TextView
        android:id="@+id/tvToSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="@dimen/text_size_symbols_template"
        app:layout_constraintStart_toEndOf="@id/tvSlash"
        app:layout_constraintBottom_toBottomOf="@id/tvFromSymbol"
        tools:text="USD" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSlash">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/tvPriceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_detail_info"
                android:textColor="#000"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/price_label"/>

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_detail_info"
                android:textColor="#000"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvPriceLabel"
                tools:text="123123" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#63000000"
                app:layout_constraintTop_toBottomOf="@id/tvPriceLabel" />

            <TextView
                android:id="@+id/tvLowDayPriceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_detail_info"
                android:textColor="#000"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPriceLabel"
                android:text="@string/low_day_price_label" />

            <TextView
                android:id="@+id/tvLowDayPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_light"
                android:textSize="@dimen/text_size_detail_info"
                app:layout_constraintBottom_toBottomOf="@id/tvLowDayPriceLabel"
                app:layout_constraintStart_toEndOf="@id/tvLowDayPriceLabel"
                tools:layout_editor_absoluteY="41dp"
                tools:text="123123" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#63000000"
                app:layout_constraintTop_toBottomOf="@id/tvLowDayPriceLabel" />

            <TextView
                android:id="@+id/tvHighDayPriceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_detail_info"
                android:textColor="#000"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLowDayPriceLabel"
                android:text="@string/high_day_price_label" />

            <TextView
                android:id="@+id/tvHighDayPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_detail_info"
                android:textColor="@android:color/holo_green_light"
                app:layout_constraintBottom_toBottomOf="@id/tvHighDayPriceLabel"
                app:layout_constraintStart_toEndOf="@id/tvHighDayPriceLabel"
                tools:text="123123" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#63000000"
                app:layout_constraintTop_toBottomOf="@id/tvHighDayPriceLabel" />

            <TextView
                android:id="@+id/tvLastTradeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_detail_info"
                android:textColor="#000"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvHighDayPriceLabel"
                android:text="@string/last_trade_label" />

            <TextView
                android:id="@+id/tvLastTrade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_detail_info"
                android:textColor="#000"
                app:layout_constraintBottom_toBottomOf="@id/tvLastTradeLabel"
                app:layout_constraintStart_toEndOf="@id/tvLastTradeLabel"
                tools:text="123123" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#63000000"
                app:layout_constraintTop_toBottomOf="@id/tvLastTrade" />

            <TextView
                android:id="@+id/tvLastUpdateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_detail_info"
                android:textColor="#000"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLastTradeLabel"
                android:text="@string/update_label" />

            <TextView
                android:id="@+id/tvLastUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_detail_info"
                android:textColor="#000"
                app:layout_constraintBottom_toBottomOf="@id/tvLastUpdateLabel"
                app:layout_constraintStart_toEndOf="@id/tvLastUpdateLabel"
                tools:text="123123" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>

